2007-02-13  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/RadioGroupManager.cs: Implement the IRadioGroupManager
	  interface.
	* libstetic/wrapper/Action.cs, libstetic/wrapper/objects.xml,
	  libstetic/wrapper/RadioActionGroupManager.cs: Implemented support
	  for radio groups in RadioAction objects.
	* libstetic/wrapper/RadioToolButton.cs,
	  libstetic/wrapper/RadioButton.cs,
	  libstetic/wrapper/RadioMenuItem.cs: Implement the new
	  IRadioGroupManagerProvider interface.
	* libstetic/IRadioGroupManager.cs: Added new interface for wrapping
	  group managers.
	* libstetic/editor/GroupPicker.cs: Get the group manager from the
	  manager provider, instead of looking for a static method.
	* libstetic/libstetic.mdp, libstetic/Makefile.am: Updated.

2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ApplicationBackend.cs, libsteticui/Application.cs,
	  libstetic/stetic.glade, libstetic/wrapper/Container.cs,
	  libstetic/editor/NonContainerWarningDialog.cs,
	  libstetic/libstetic.mdp, libstetic/Makefile.am, stetic/Stetic.cs,
	  stetic/Configuration.cs: When dropping a non-container into a main
	  window, warn the user whether they really wanted that, or if they
	  instead wanted a container to be in place. Make this warning dialog
	  configurable.
	* libsteticui/PropertyTree.cs: Removed unused code.

2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/PropertyTree.cs: Refiltering the tree while it is being
	  edited has lots of issues, so filtering has been completely
	  removed. Now, the label of hidden properties are shown as disabled,
	  and the content blank.
	* stetic/Makefile.am, stetic/stetic.mdp: Added missing resource.

2007-02-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/libsteticui.mdp, libsteticui/Makefile.am,
	  libstetic/Makefile.am, stetic/Makefile.am: Flush.
	* libsteticui/WidgetDesigner.cs: When disposing the active project,
	  reset the active project property.